--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-sanitize": "~1.2.0",
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "angular-strap": "2.1",
+    "lodash": "~4.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
